--- a/android/app/src/main/res/drawable-night-v21/launch_background.xml
+++ b/android/app/src/main/res/drawable-night-v21/launch_background.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Modify this file to customize your launch splash screen -->
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Fondo blanco personalizado (mismo que en day mode) -->
     <item>
         <shape android:shape="rectangle">
             <solid android:color="#FCFFFF" />
